18-exportdiagramasanimage: FIXED Jenkins file